--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Projacct",
+  "name": "Accounting_App",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -19,6 +19,7 @@
     "native-base": "^2.15.2",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-eject": "^0.1.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-modal-datetime-picker": "^9.2.1",
     "react-native-reanimated": "^2.1.0",
